	* depname() has been added, for package managers’ module’s maintainers.
	  It should allow defining versions of dependencies (and conflicts,
	  and replacements, and so on) without breaking package managers that
	  do not manage versions.
	* The shell function which() which is embedded in pkg++ has been
	  corrected (yeah, before, we had a buggy which()).

	-- Lukc <lukc@upyum.com>

0.11.1:
	* New variable available for packagers, PKGMK_PORT.
	  This variable gives the repertory where the port is. So inclusions 
	  of port-specific files is now possible. (for exemple, a script under
	  a different license or common code to recipes with only different 
	  versions)
	* A begin of revision-in-version-number implementation is made. It 
	  does not work with every package manager or SCM.
	* $CROSS is now a usable boolean. It also should be now set to true
	  only when the triplet zsh was built with is different from the one 
	  in $CHOST. Before, it was set to true when $CHOST was non-zero.
	* Small improvements in modules/dpkg:
		* Internal modification leading to a module that should be easier
		  to maintain.
		* Conflicts are now managed.

	-- Lukc <lukc@upyum.com>

0.11:
	* A beginning of implementation of scripts in Pkgfile’s functions has
	  been made.
	* Blank lines are removed in the output file of cpp “pkg++”. It is not
	  really noticeable concerning size of the file, but there is no more
	  20 blank lines and things like that…

	-- Lukc <lukc@upyum.com>

0.10.2:
	* Corrections of the manual pages which still contained references to
	  pkgmk.
	* The zcompile instruction was broken and has been corrected in the
	  ./configure generated Makefile.
	* The default configuration has been ported from bash to zsh, which has
	  not been done before…

	-- Lukc <lukc@upyum.com>

0.10.1:
	* Correction of a bug that caused architectures to be not written
	  in some packages.
	* Some splits problems with empty split_* variables are solved and